// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Schematic's identifyUser destination action: all fields 1`] = `
Object {
  "body": Object {
    "company": Object {
      "keys": Object {
        "testType": "A7WJL)2NKFy&pmtr0",
      },
      "name": "A7WJL)2NKFy&pmtr0",
      "traits": Object {
        "testType": "A7WJL)2NKFy&pmtr0",
      },
    },
    "keys": Object {
      "testType": "A7WJL)2NKFy&pmtr0",
    },
    "name": "A7WJL)2NKFy&pmtr0",
    "traits": Object {
      "testType": "A7WJL)2NKFy&pmtr0",
    },
  },
  "event_type": "identify",
}
`;

exports[`Testing snapshot for Schematic's identifyUser destination action: required fields 1`] = `
Object {
  "body": Object {
    "company": Object {},
    "keys": Object {
      "testType": "A7WJL)2NKFy&pmtr0",
    },
  },
  "event_type": "identify",
}
`;
